[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Login.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Minecraft.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 2 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -290.0
margin_top = -166.0
margin_right = -30.0
margin_bottom = 166.0
alignment = 1

[node name="Main" type="Label" parent="Menu"]
margin_top = 39.0
margin_right = 580.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.568627, 0.00784314, 1 )
text = "Islanders"
align = 1
valign = 1

[node name="Login" type="HBoxContainer" parent="Menu"]
margin_top = 107.0
margin_right = 580.0
margin_bottom = 180.0
custom_constants/separation = 32
alignment = 1

[node name="Labels" type="VBoxContainer" parent="Menu/Login"]
margin_left = 75.0
margin_right = 233.0
margin_bottom = 73.0
custom_constants/separation = 9

[node name="User" type="Label" parent="Menu/Login/Labels"]
margin_right = 158.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "User:"

[node name="Password" type="Label" parent="Menu/Login/Labels"]
margin_top = 41.0
margin_right = 158.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 3 )
text = "Password:"

[node name="Input" type="VBoxContainer" parent="Menu/Login"]
margin_left = 265.0
margin_right = 505.0
margin_bottom = 73.0

[node name="InputUser" type="LineEdit" parent="Menu/Login/Input"]
margin_right = 240.0
margin_bottom = 34.0
rect_min_size = Vector2( 240, 32 )
custom_fonts/font = SubResource( 4 )

[node name="InputPassword" type="LineEdit" parent="Menu/Login/Input"]
margin_top = 38.0
margin_right = 240.0
margin_bottom = 72.0
rect_min_size = Vector2( 240, 32 )
custom_fonts/font = SubResource( 5 )

[node name="Result" type="Label" parent="Menu"]
margin_top = 184.0
margin_right = 580.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.12549, 0.631373, 0, 1 )
text = "Please enter your username and password"
align = 1
valign = 1
autowrap = true

[node name="ButtonLogin" type="Button" parent="Menu"]
margin_top = 212.0
margin_right = 580.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 7 )
text = "Login"

[node name="ButtonRegister" type="Button" parent="Menu"]
margin_top = 254.0
margin_right = 580.0
margin_bottom = 292.0
custom_fonts/font = SubResource( 7 )
text = "Register"
[connection signal="pressed" from="Menu/ButtonLogin" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Menu/ButtonRegister" to="." method="_on_ButtonRegister_pressed"]
